# imagequant-wasm

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  bun.lockb  package.json  tsconfig.json
src/: PNGEncoder.ts  index.ts  lib.rs  utils.ts
src/__tests__/: png.test.ts
