[package]
name = "imagequant"
version = "0.2.0"
edition = "2021"
description = "imagequant wasm port for png compress in JavaScript runtime"
license = "MIT"
repository = "https://github.com/Panda-Intelligence/imagequant-wasm.git"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.77"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
imagequant = { version = "4.3.4", default-features = false }

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+simd128", "-C", "opt-level=3"]

[package.metadata.wasm-pack]
name = "@panda-ai/imagequant"
